<resources>
    <string name="app_name">TicketEventApp</string>
    <string name="profile_icon">Profile icon</string>
    <string name="login_icon">Login icon</string>
    <string name="username">Username</string>
    <string name="acc_username">Field to insert your username</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="password">Password</string>
    <string name="acc_password">Field to insert your password</string>
    <string name="create_new_account">Create account</string>
    <string name="icon_to_add_new_account">Icon to add new account</string>
    <string name="registration_info">Insert all data to continue</string>
    <string name="sign_up_button">Sign up</string>
    <string name="name">Name</string>
    <string name="acc_name">Field to insert your name</string>
    <string name="surnname">Surname</string>
    <string name="acc_surname">Field to insert your surname</string>
    <string name="new_event">New event</string>
    <string name="event_name">Event name</string>
    <string name="acc_event_name">Field to insert the event name</string>
    <string name="acc_event_place">Field to insert the event place</string>
    <string name="event_place">Event place</string>
    <string name="event_description">Event description</string>
    <string name="event_date">Event date</string>
    <string name="acc_event_date">Field to insert the event date</string>
    <string name="event_price">Event price</string>
    <string name="acc_event_price">Field to insert the event price</string>
    <string name="event_time">Event time</string>
    <string name="acc_event_time">Field to insert the event time</string>
    <string name="add_event">Add event</string>
    <string name="event_icon">Icon or photo about event</string>
    <string name="scan_qrcode">Scan qrcode</string>
    <string name="view_partecipants">View partecipants</string>
    <string name="action_select">Choose action</string>
    <string name="all_events">All events</string>
    <string name="all_partecipants">All partecipants</string>
    <string name="partecipant_icon">Icon or photo about partecipant</string>
    <string name="ticket">Personal ticket</string>
    <string name="acc_save_to_gallery">Icon to save to gallery</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="all_events_chip">All</string>
    <string name="current_events_chip">Current</string>
    <string name="past_events_chip">Past</string>
    <string name="near_events_chip">Near</string>
    <string name="successful_registration">Successful registration</string>
    <string name="used_username">Username already used</string>
    <string name="empty_field">Empty field</string>
    <string name="username_not_exists">Username doesn\'t exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="select_event_date">Select event date</string>
    <string name="gps_features_disabled">Some GPS features are disabled. You should allow GPS permissions.</string>
    <string name="ask_turn_on_gps">The GPS is off, do you want to enable it?</string>
    <string name="gps_features_cannot_run">Some GPS features can\'t run because your GPS is off</string>
    <string name="price_must_be_numeric">Price must be numeric</string>
    <string name="info_event">Event info</string>
    <string name="join_event">Join event</string>
    <string name="tickets">Your tickets</string>
    <string name="acc_add_mew_event">Add mew event</string>
    <string name="events">Events</string>
    <string name="next_events_chip">Next</string>
    <string name="load_position">Position acquisition, wait few seconds</string>
    <string name="modify_event">Modify event</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="saving_qr_code">Saving QrCode in your gallery</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="all_joiners">All joiners</string>
    <string name="present_joiners">Present</string>
    <string name="absent_joiners">Absent</string>
    <string name="delete_event_icon">Icon to delete event</string>
    <string name="cant_modify_event">Event  already started! You can\'t modify event info</string>
    <string name="cant_scan_ticket">Event not started yet! You can scan ticket only when event already started</string>
    <string name="qr_code_event_title">Qr code event</string>
    <string name="camera_features_disabled">Some Camera features are disabled. You should allow Camera permissions.</string>
    <string name="storage_features_disabled">Some Storage features are disabled. You should allow Storage  permissions.</string>
    <string name="cant_use_maps_features">Google Maps features missing! You should install Google Maps</string>

</resources>