<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recycle_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_events"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_view_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/all_events_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_events_chip"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/current_events_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_events_chip"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/past_events_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_events_chip"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/near_events_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_events_chip"
            style="@style/Widget.Material3.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_filter"
        >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_anchor="@+id/recycler_view"
                app:layout_anchorGravity="center"
                tools:listitem="@layout/event_card_layout" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




    <!-- android:layout_marginTop="?attr/actionBarSize" -->
