<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/recycle_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_joiners"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_view_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/present_joiners_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present_joiners"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/absent_joiners_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent_joiners"
            style="@style/Widget.Material3.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_joiners"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_filter"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:listitem="@layout/joiner_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>




    <!-- android:layout_marginTop="?attr/actionBarSize" -->
